added logo and remove images folder

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6">
-        <img class="img-responsive title-logo" src="http://placehold.it/100x100" alt="Kitten">
+        <img class="img-responsive title-logo" src="img/logo.png" alt="Kitten">
       </div>
       <div class="col-xs-12 col-sm-6 text-right text-uppercase">
         <h1 class="title-super text-thin">Marc Günnel</h1>
