--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 
     <div class="row">
       <div class="col-md-12">
-        <img class="img-responsive" src="img/pexels-photo-270360.jpeg" alt="Jumbotron">
+        <picture>
+          <source media="(min-width: 599px)" srcset="img/pexels-photo-270360-600_medium.jpeg" />
+          <img class="img-responsive" src="img/pexels-photo-270360-400_small.jpeg" alt="Jumbotron">
+        <picture>
       </div>
     </div>
 
